# manastr

./: .gitignore  .gitmodules  ARCHITECTURE_REDESIGN.md  BEVY_INTEGRATION_STRATEGY.md  CLAUDE.md  Cargo.toml  DEPENDENCY_RULES.md  DEVELOPMENT_STATUS.md  EFFICIENT_STATELESS_DESIGN.md  IMPLEMENTATION_STATUS.md  JUST_README.md  MANASTR_TEST_GUIDE.md  PROJECT_STRUCTURE.md  README.md  STATELESS_IMPLEMENTATION_PLAN.md  cdk-mintd.sqlite-shm  cdk-mintd.sqlite-wal  demo.sh  justfile  rust-analyzer.toml  spec.md
.claude/: README.md  next_session.md  session_summary.md
.claude/agents/: crypto_specialist.md  game_engine.md  nostr_dev.md
.claude/context/: agent_roles.md  system_overview.md
.claude/specifications/: cashu_integration.md  rust_implementation.md  web_client_spec.md
.claude/status/: memory_template.md  task_board.md
.goose/memory/: development.txt
daemons/: Cargo.toml  MATCH_FLOW_SPECIFICATION.md  NOSTR_FIRST_ARCHITECTURE.md  PLAYER_DRIVEN_TESTING.md  README.md  economic_model.rs  gaming_wallet.rs  generate-test-configs.sh  integration-test-Cargo.toml  integration-test.rs  player-driven-integration-test.rs  run-advanced-tests.sh  run-integration-test.sh  run-player-driven-tests.sh  start-test-services.sh  test-keys.toml  test_deterministic_minting.rs
daemons/cashu-mint/: Cargo.toml
daemons/cashu-mint-stub-backup/: Cargo.toml  game-engine-auth.toml  mint.toml
daemons/cashu-mint-stub-backup/migrations/: 20240101000000_initial.up.sql
daemons/cashu-mint-stub-backup/src/: database.rs  errors.rs  lightning.rs  main.rs  stub_mint.rs
daemons/cashu-mint/migrations/: 20240101000000_initial.down.sql
daemons/cashu-mint/src/: config.rs  errors.rs  game_engine_api.rs  main.rs  simple_storage.rs  storage.rs  stub_mint.rs
daemons/config/: README.md  cashu-mint.toml  cdk-mintd-deterministic.toml
daemons/game-engine-bot/: Cargo.toml  README.md  game-engine.toml
daemons/game-engine-bot/src/: cashu_client.rs  config.rs  errors.rs  game_state.rs  lib.rs  main.rs  match_events.rs  match_state_machine.rs  match_tracker.rs  nostr_client.rs
daemons/integration_test/: Cargo.toml
daemons/integration_test/src/: main.rs  test_scenarios.rs
daemons/integration_tests/: Cargo.toml  README.md  TUTORIAL_FLOW.md  integration_runner.rs  main.rs  mod.rs  player-driven-integration-test.rs  tutorial.rs
daemons/integration_tests/src/: gaming_auth_test.rs  lib.rs  test_suite.rs
daemons/integration_tests/src/core/: anti_cheat.rs  concurrent.rs  edge_cases.rs  gaming_wallet.rs  happy_path.rs  mod.rs  shared.rs  stress.rs  test_suite.rs
daemons/integration_tests/src/matches/: mod.rs
daemons/integration_tests/src/players/: mod.rs
daemons/integration_tests/src/utils/: mod.rs
daemons/integration_tests/src/validation/: mod.rs
daemons/manastr-bevy/: Cargo.toml
daemons/manastr-bevy/src/: game.rs  main.rs  manastr_core.rs  networking.rs  ui.rs
daemons/manastr-tauri/: Cargo.toml  Dioxus.toml
daemons/manastr-tauri/assets/: styles.css
daemons/manastr-tauri/src/: app.rs
daemons/manastr-tauri/src-tauri/: Cargo.toml  game-engine.toml  tauri.conf.json
daemons/manastr-tauri/src-tauri/src/: integrated_nostr_relay.rs  lib.rs  main.rs  service_manager.rs  service_orchestrator.rs
daemons/manastr-tcg/: Cargo.toml
daemons/manastr-tcg/src/: app.rs  main.rs
daemons/manastr-web/: README.md  package-lock.json  package.json  vite.config.js
daemons/manastr-web/public/: index.html
daemons/manastr-web/src/: App.jsx  ManastrClient.js  main.js
daemons/manastr-web/src/components/: EventCarousel.jsx  EventNavigator.jsx
daemons/nostr-relay/: README.md  setup.sh  start.sh  strfry.conf  test.sh
daemons/service-orchestrator/: Cargo.toml  README.md
daemons/service-orchestrator/src/: main.rs
daemons/shared-game-logic/: Cargo.toml
daemons/shared-game-logic/src/: abilities.rs  combat.rs  commitment.rs  game_state.rs  league.rs  lib.rs
daemons/src/: integration_runner.rs  lib.rs
daemons/web-client/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
daemons/web-client/src/: App.tsx
daemons/web-client/src/components/battle/: BattleSimulator.tsx  UnitCard.tsx
daemons/web-client/src/components/common/: LoadingSpinner.tsx
daemons/web-client/src/components/league/: LeagueSelector.tsx
daemons/web-client/src/components/wallet/: WalletStatus.tsx
daemons/web-client/src/stores/: gameStore.ts  wasmStore.ts
daemons/web-client/src/styles/: index.css
daemons/web-client/src/types/: game.ts
daemons/web-client/src/wasm/: gameLogic.ts
docs/: DOCUMENTATION_AUDIT.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  ECONOMIC_MODEL.md  PROTOCOL_SPECIFICATION.md  README.md  TRADING_CARD_GAME_INTERFACE.md
docs/agent-memory/: crypto-specialist_memory.md  game-engine_memory.md  nostr-dev_memory.md  ui-dev_memory.md
docs/architecture/: COMPONENT_BREAKDOWN.md  SYSTEM_OVERVIEW.md
docs/diagrams/: ANTI_CHEAT_VALIDATION.md  INTEGRATION_TEST_FLOW.md  MATCH_EXECUTION_DETAILS.md  README.md  SERVICE_ARCHITECTURE.md
docs/specifications/: ARCHITECTURE_SUMMARY.md  CASHU_CDK_INTEGRATION.md  GAME_ENGINE_BOT_SPEC.md  LOCAL_DEVELOPMENT_SETUP.md  NOSTR_RELAY_SETUP.md  RUST_IMPLEMENTATION_PLAN.md  SHARED_CONTEXT.md  SIMPLIFIED_ARCHITECTURE.md  TOKEN_ECONOMICS.md  WASM_SHARED_LOGIC_SPEC.md  WEB_CLIENT_SPEC.md
docs/team/: ROLES_RESPONSIBILITIES.md  UPDATED_TEAM_ROLES.md
planning/dependencies/: DAEMON_FOCUSED_TASKS.md  KANBAN_TASK_BOARD.md  TASK_DEPENDENCY_GRAPH.md
planning/workbreakdown/: PHASE_1_REQUIREMENTS.md  PHASE_2_CORE_DEVELOPMENT.md  PHASE_2_SIMPLIFIED.md  PHASE_3_LEADERBOARD_REWARDS.md  PHASE_3_TOURNAMENT_SYSTEM.md
