[workspace]
resolver = "2"
members = [
    "daemons/shared-game-logic",
    "daemons/game-engine-bot",
    "daemons/integration_tests",
]

# Exclude external dependencies and submodules
exclude = [
    "daemons/nostr-relay/nostr-rs-relay",  # External dependency
    "daemons/cdk",  # CDK submodule - managed separately
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Core dependencies shared across all crates
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Integration test dependencies
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
rand = "0.8"
futures = "0.3"
hex = "0.4"

# Nostr dependencies (latest versions)
nostr = "0.35"
nostr-sdk = "0.35"

# CDK dependencies
cdk = "0.11"
cdk-fake-wallet = "0.11"
cdk-sqlite = "0.11"

# Utility dependencies
uuid = { version = "1.0", features = ["v4"] } 