[package]
name = "player-driven-integration-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "player-driven-integration-test"
path = "player-driven-integration-test.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP client for API testing
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Nostr integration
nostr = "0.35"
nostr-sdk = "0.35"

# Shared game logic for commitment functions
shared-game-logic = { path = "shared-game-logic" }

# UUID for match IDs
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Cryptographic hashing
sha2 = "0.10"

# Cashu integration for token simulation
cdk = "0.11"