[package]
name = "game-engine-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared game logic (native Rust, not WASM)
shared-game-logic = { path = "../shared-game-logic" }

# Web framework
axum = "0.7"
tokio = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }

# Nostr client
nostr-sdk = { workspace = true }
nostr = { workspace = true }

# HTTP client for Cashu integration
reqwest = { workspace = true }

# Crypto and utilities
uuid = { version = "1.12.1", features = ["v4", "serde"] }
chrono = { workspace = true }

# Configuration and logging
config = "0.14"
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8.1"