[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "main.rs"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nostr = "0.30"
nostr-sdk = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rand = "0.8"
futures = "0.3"
hex = "0.4"
cdk = "0.11"
cdk-fake-wallet = "0.11"

# Local dependencies
shared-game-logic = { path = "../shared-game-logic" } 