[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"



[[bin]]
name = "integration-runner"
path = "integration_runner.rs"

[[bin]]
name = "gaming-wallet"
path = "src/core/gaming_wallet.rs"

[dependencies]
# Use workspace dependencies for consistency
anyhow = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nostr = { workspace = true }
nostr-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
cdk = { workspace = true }
cdk-fake-wallet = { workspace = true }
cdk-sqlite = { workspace = true }

# TUI dependencies for tutorial mode
ratatui = "0.28"
crossterm = "0.28"

# Local dependencies
shared-game-logic = { path = "../shared-game-logic" } 