[package]
name = "manastr-bevy"
version = "0.1.0"
edition = "2021"
description = "Revolutionary Trading Card Game with Bevy Engine + Matchbox P2P"

[dependencies]
# Bevy Game Engine
bevy = { version = "0.12", default-features = false, features = ["bevy_winit", "bevy_render", "png", "bevy_sprite", "bevy_text", "bevy_ui", "x11"] }

# Modern UI Framework - Using Bevy's built-in UI for now
# bevy_lunex = "0.0.9"  # Temporarily disabled due to version compatibility

# Real-time P2P Networking
matchbox_socket = "0.8"

# Manastr Security Core - reuse existing infrastructure
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["full"] }

# Nostr Integration
nostr = { workspace = true }
nostr-sdk = { workspace = true }

# Integration with existing Manastr infrastructure
integration-tests = { path = "../integration_tests" }
shared-game-logic = { path = "../shared-game-logic" }

[[bin]]
name = "manastr-bevy"
path = "src/main.rs"