[package]
name = "manastr-tauri-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Dioxus frontend framework
dioxus = { version = "0.6", features = ["web"] }
dioxus-logger = "0.6"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Async support
tokio = { version = "1.0", features = ["time"] }

# WASM-compatible timers
gloo-timers = { version = "0.3", features = ["futures"] }

[workspace]
members = ["src-tauri"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
