[package]
name = "manastr-tcg"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI Framework
iced = "0.12"
tokio = { version = "1.0", features = ["full"] }
async-std = "1.12"

# Core dependencies
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Integration with existing infrastructure
integration-tests = { path = "../integration_tests" }
shared-game-logic = { path = "../shared-game-logic" }

[[bin]]
name = "manastr-tcg"
path = "src/main.rs"