[package]
name = "shared-game-logic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true, features = ["wasm-bindgen"] }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6"

# For better error messages in WASM
console_error_panic_hook = { version = "0.1", optional = true }

# Optional allocator for WASM (smaller binary size)
wee_alloc = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

# Enable optimizations for WASM builds
[profile.release]
opt-level = "s"  # Optimize for size
lto = true       # Link-time optimization
debug = false    # No debug info in release

# WASM-specific optimizations
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]