[package]
name = "manastr-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "manastr_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"

# Time and logging
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Process management
uuid = { version = "1.12.1", features = ["v4"] }

# Integration with existing Manastr services
cdk = { path = "../../cdk/crates/cdk" }
cdk-mintd = { path = "../../cdk/crates/cdk-mintd" }
cdk-sqlite = { path = "../../cdk/crates/cdk-sqlite" }
shared-game-logic = { path = "../../shared-game-logic" }
game-engine-bot = { path = "../../game-engine-bot" }
hex = "0.4"
sha2 = "0.10"

# Nostr integration  
nostr = "0.35"
nostr-sdk = "0.35"
# Temporarily disabled due to SQLite version conflict - will implement external process fallback
# nostr-rs-relay = { path = "../../nostr-relay/nostr-rs-relay" }

